Topology tree implementation
